--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,3 @@
-aiohttp==3.8.4
-aiosignal==1.3.1
-async-timeout==4.0.2
-attrs==23.1.0
-blinker==1.6.2
-certifi==2023.5.7
-charset-normalizer==3.1.0
-click==8.1.3
-filelock==3.12.2
-Flask==2.3.2
-frozenlist==1.3.3
-fsspec==2023.6.0
-huggingface-hub==0.15.1
-idna==3.4
-itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==2.1.3
-mpmath==1.3.0
-multidict==6.0.4
-networkx==3.1
-numpy==1.25.0
-openai==0.27.8
-packaging==23.1
-python-dotenv==1.0.0
-PyYAML==6.0
-regex==2023.6.3
-requests==2.31.0
-safetensors==0.3.1
-sympy==1.12
-tokenizers==0.13.3
-torch==2.0.1
-tqdm==4.65.0
-transformers==4.30.2
-typing_extensions==4.6.3
-urllib3==2.0.3
-Werkzeug==2.3.6
-yarl==1.9.2
+flask
+openai
+python-dotenv
